--- a/css/style.scss
+++ b/css/style.scss
@@ -244,8 +244,9 @@
             padding:20px 0;
         }
 
-        .row{
-            padding-left:140px;
+
+        .col-xs-6{
+            text-align:center;
         }
     }
 
@@ -260,6 +261,7 @@
     .get-touch{
 
         margin-top:40px;
+        text-align:center;
 
         span{
             display:block;
