--- a/css/style.css
+++ b/css/style.css
@@ -208,8 +208,8 @@
   @media (max-width: 767px) {
     .touch {
       padding: 20px 0; }
-    .touch .row {
-      padding-left: 140px; } }
+    .touch .col-xs-6 {
+      text-align: center; } }
   .touch h2 {
     font-size: 25px;
     color: #c9c5bd; }
@@ -219,7 +219,8 @@
     font-size: 17px;
     color: #c9c5bd; }
   .touch .get-touch {
-    margin-top: 40px; }
+    margin-top: 40px;
+    text-align: center; }
     .touch .get-touch span {
       display: block;
       color: #f05f40;
